Regression: Weight Painting doesn't work with Mirror and Armature modifier #100862

Closed
opened 2022-09-06 21:55:05 +02:00 by Pavel Duong · 7 comments

System Information
Operating system: Arch Linux
Graphics card: Intel UHD 620

Blender Version
Broken: 3.4
Worked: 3.3
Caused by 9823a8f72b
Short description of error

Attempting to weight paint on mirrored mesh with armature on it will only work when painting over where the mesh was in its undeformed state.

Exact steps for others to reproduce the error

(Skip to step 4 if using the following file)

  1. Create a cube, add a mirror modifier to it (you can offset them in mesh, so they don't intersect)
  2. Create an single bone armature and parent the Cube to it using Automatic Weights
  3. Enter pose mode in the armature and move the bone
  4. Exit pose mode, enter Weight Painting mode of the Cube
  5. Attempting to change weights in the posed location will not work, however it will change if you're drawing over the area where the undeformed mesh would be.
    broken_weight_painting.blend
    74f983738ab4 (working) 0ff920b77779 (broken)
    working_weight.mp4 broken_weight.mp4
**System Information** Operating system: Arch Linux Graphics card: Intel UHD 620 **Blender Version** Broken: 3.4 Worked: 3.3 Caused by 9823a8f72b **Short description of error** Attempting to weight paint on mirrored mesh with armature on it will only work when painting over where the mesh was in its undeformed state. **Exact steps for others to reproduce the error** *(Skip to step 4 if using the following file)* 1. Create a cube, add a mirror modifier to it (you can offset them in mesh, so they don't intersect) 2. Create an single bone armature and parent the Cube to it using Automatic Weights 3. Enter pose mode in the armature and move the bone 4. Exit pose mode, enter Weight Painting mode of the Cube 5. Attempting to change weights in the posed location will not work, however it will change if you're drawing over the area where the undeformed mesh would be. [broken_weight_painting.blend](https://archive.blender.org/developer/F13463386/broken_weight_painting.blend) |`74f983738ab4` (working)|`0ff920b77779` (broken)| | -- | -- | |[working_weight.mp4](https://archive.blender.org/developer/F13463393/working_weight.mp4)|[broken_weight.mp4](https://archive.blender.org/developer/F13463394/broken_weight.mp4)|
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Member

Broken since 9823a8f72b
@angavrilov

Broken since 9823a8f72b @angavrilov

This issue was referenced by 2b43173fa9

This issue was referenced by 2b43173fa922b04e5e1db092964aa6c263450667

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Alexander Gavrilov self-assigned this 2022-09-07 10:11:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100862
No description provided.